--- a/config/database.yml
+++ b/config/database.yml
@@ -26,14 +26,17 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+    adapter: postgresql
+    encoding: unicode
+    host: localhost
+    database: trackman_production
+    pool: 5
+    username: demo
+    password: <%= ENV['db_production_password'] %>
 
 secondary_production:
   adapter: mysql2
   database: traccar_production
   username: root
-  password: <%= ENV['db_password'] %>
+  password: <%= ENV['db_production_password'] %>
   host: localhost
