wrote an rspec test case to check if a car is entering an area, the car movement is simulated through the database by adding predefined GPS coordinates to the traccar database and also adding few records to the Rails db

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,13 @@ test:
   pool: 5
   timeout: 5000
 
+secondary_test:
+  adapter: mysql2
+  database: traccar_test
+  username: root
+  password: <%= ENV['db_password'] %>
+  host: localhost
+
 production:
   adapter: sqlite3
   database: db/production.sqlite3
