--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,11 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: trackman_development
+  username: root
+  password: <%= ENV['db_password'] %>
+  host: localhost
 
 secondary_development:
   adapter: mysql2
@@ -20,10 +21,11 @@ secondary_development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: trackman_test
+  username: root
+  password: <%= ENV['db_password'] %>
+  host: localhost
 
 secondary_test:
   adapter: mysql2
@@ -33,13 +35,11 @@ secondary_test:
   host: localhost
 
 production:
-    adapter: postgresql
-    encoding: unicode
-    host: localhost
-    database: trackman_production
-    pool: 5
-    username: demo
-    password: <%= ENV['db_password'] %>
+  adapter: mysql2
+  database: trackman_production
+  username: root
+  password: <%= ENV['db_password'] %>
+  host: localhost
 
 secondary_production:
   adapter: mysql2
