--- a/config/database.yml
+++ b/config/database.yml
@@ -5,16 +5,16 @@
 #   gem 'sqlite3'
 development:
   adapter: mysql2
-  database: trackman_development
-  username: root
-  password: <%= ENV['db_password'] %> #set up password in config/application.yml
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
   host: localhost
 
 secondary_development:
   adapter: mysql2
-  database: traccar
-  username: root
-  password: <%= ENV['db_password'] %> #set up password in config/application.yml
+  database: <%= ENV['DB_TRACCAR_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -22,28 +22,28 @@ secondary_development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql2
-  database: trackman_test
-  username: root
-  password: <%= ENV['db_password'] %> #set up password in config/application.yml
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
   host: localhost
 
 secondary_test:
   adapter: mysql2
-  database: traccar_test
-  username: root
-  password: <%= ENV['db_password'] %> #set up password in config/application.yml
+  database: <%= ENV['DB_TRACCAR_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
   host: localhost
 
 production:
   adapter: mysql2
-  database: trackman_production
-  username: root
-  password: <%= ENV['db_password'] %> #set up password in config/application.yml
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
   host: localhost
 
 secondary_production:
   adapter: mysql2
-  database: traccar
-  username: root
-  password: <%= ENV['db_password'] %> #set up password in config/application.yml
+  database: <%= ENV['DB_TRACCAR_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
   host: localhost
