--- a/config/database.yml
+++ b/config/database.yml
@@ -5,45 +5,51 @@
 #   gem 'sqlite3'
 development:
   adapter: mysql2
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: <%= ENV['MYSQL_PORT'] || '3306' %>
   database: <%= ENV['DB_NAME'] %>
   username: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
-  host: localhost
+  password: <%= ENV['DB_PASSWORD'] %> 
 
 secondary_development:
   adapter: mysql2
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: <%= ENV['MYSQL_PORT'] || '3306' %>
   database: <%= ENV['DB_TRACCAR_NAME'] %>
   username: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
-  host: localhost
+  password: <%= ENV['DB_PASSWORD'] %> 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql2
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: <%= ENV['MYSQL_PORT'] || '3306' %>
   database: <%= ENV['DB_NAME'] %>
   username: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
-  host: localhost
+  password: <%= ENV['DB_PASSWORD'] %> 
 
 secondary_test:
   adapter: mysql2
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: <%= ENV['MYSQL_PORT'] || '3306' %>
   database: <%= ENV['DB_TRACCAR_NAME'] %>
   username: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
-  host: localhost
+  password: <%= ENV['DB_PASSWORD'] %> 
 
 production:
   adapter: mysql2
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: <%= ENV['MYSQL_PORT'] || '3306' %>
   database: <%= ENV['DB_NAME'] %>
   username: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
-  host: localhost
+  password: <%= ENV['DB_PASSWORD'] %> 
 
 secondary_production:
   adapter: mysql2
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: <%= ENV['MYSQL_PORT'] || '3306' %>
   database: <%= ENV['DB_TRACCAR_NAME'] %>
   username: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %> #set up password in config/application.yml
-  host: localhost
+  password: <%= ENV['DB_PASSWORD'] %> 
