--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+!/db/documentation.sqlite3-journal
+!/db/documentation.sqlite3
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
