--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -13,6 +13,7 @@ development:
 production:
   :logfile: ./log/sidekiq_production.log
   :verbose: true
+  :pidfile: ./tmp/pids/sidekiq.pid
   :concurrency: 10
   :queues:
     - [mailer, 10]
