--- a/config/private_pub.yml
+++ b/config/private_pub.yml
@@ -5,6 +5,6 @@ test:
   server: "http://localhost:9292/faye"
   secret_token: "secret"
 production:
-  server: "http://trackmanfaye.herokuapp.com/faye"
+  server: "http://7city.dk:9292/faye"
   secret_token: "trackman"
   signature_expiration: 3600 # one hour
