Fix map api key

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  server_name 7city.dk;
+  server_name mydrivr.com;
 
   root /home/deploy/apps/trackman/current/public;
   access_log /home/deploy/apps/trackman/current/log/nginx.access.log;
